--- a/index.html
+++ b/index.html
@@ -2,6 +2,37 @@
 
 <html>
 
-<h1></h1>
+<head>
+	<script type="text/javascript" src="canvasjs.min.js"></script>
+
+	<script type="text/javascript">
+      window.onload = function () {
+          var chart = new CanvasJS.Chart("chartContainer", {
+              data: [
+              {
+                  type: "column",
+                  dataPoints: [
+                  { x: 10, y: 10 },
+                  { x: 20, y: 15 },
+                  { x: 30, y: 25 },
+                  { x: 40, y: 30 },
+                  { x: 50, y: 28 }
+                  ]
+              }
+              ]
+          });
+ 
+          chart.render();
+      }
+  </script>
+
+</head>
+
+
+
+<body>
+	<h1>UI Functionality Challenge</h1>
+	<div id="chartContainer" style="height: 500px; width: 50%;"></div>
+</body>
 
 </html>
